==> QuyenLe1501/BTL_NhapMonHeThongNhung/mainCode/delay.c <==
#include "stm32f10x.h"
#include "delay.h"

void delay_init(void)
{
	TIM_TimeBaseInitTypeDef timerInit;
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
	
	timerInit.TIM_CounterMode = TIM_CounterMode_Up;
	timerInit.TIM_Period = 0xFFFF;
	timerInit.TIM_Prescaler = 72 - 1;
	TIM_TimeBaseInit(TIM2, &timerInit);
}

void Delay1Ms(void)
{
	TIM_Cmd(TIM2, ENABLE);
	TIM_SetCounter(TIM2, 0);
	while (TIM_GetCounter(TIM2) < 1000) {
	}
	TIM_Cmd(TIM2, DISABLE);
}

void delay_us(uint32_t delay)
{
	TIM_Cmd(TIM2, ENABLE);
	TIM_SetCounter(TIM2, 0);
	while (TIM_GetCounter(TIM2) < delay) {
	}
	TIM_Cmd(TIM2, DISABLE);
}

void Delay_Ms(uint32_t u32DelayInMs)
{
	
	while (u32DelayInMs) {
		Delay1Ms();
		--u32DelayInMs;
	}
}
